--- a/Browser/mainpage/index.html
+++ b/Browser/mainpage/index.html
@@ -3,8 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strona Główna</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="manifest" href="manifest.json" />
+    <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico">
+    <link rel="stylesheet" href="/assets/css/style.css"> 
 </head>
 <body>
     <div id = "clock" onload="currentTimeDate()"></div>
@@ -25,6 +26,6 @@
     </div>
     
 
-    <script src="javascript.js"></script>
+    <script src="/assets/js/javascript.js"></script>
 </body>
 </html>
