--- a/Browser/StartpageFirefox/src/CustomStartPage.html
+++ b/Browser/StartpageFirefox/src/CustomStartPage.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +12,7 @@
     <div id = "clock" onload="currentTimeDate()"></div>
     <div id = "date" onload="currentTimeDate()"></div>
     <div id = "pagesIcons">
-        <a href="facebook.com/">
+        <a href="https://facebook.com/">
             <span class="nf-md-facebook">󰈌</span>
         </a>
         <a href="https://github.com/">
